k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cosmeaf-deployment
  labels:
    app: web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
      - name: web-app
        image: cosmeaf/cosmeaf_image:latest
        ports:
        - containerPort: 3000
      volumes:
      - name: kube-api-access-8248n
        projected:
          sources:
          - serviceAccountToken:
              path: "token"
              expirationSeconds: 3607
              audience: "api"
